# watch-display-sim

./: .gitignore  .gitmodules  CMakeLists.txt  generate-assets.ps1
img-generator/: index.js  package-lock.json  package.json
include/: buffer_display.h  nrf_def.h  nrf_gfx.h  nrf_lcd.h  png_utils.h  roboto8pt.h
src/: buffer_display.c  main.c  nrf_gfx.c  png_utils.c  roboto8pt.c
